--- a/Not3XianGit/0802登入登出Bloc+CreateFreeLeaf/flutter_project/pubspec.yaml
+++ b/Not3XianGit/0802登入登出Bloc+CreateFreeLeaf/flutter_project/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   fluttertoast: ^8.0.8
   image_picker_for_web: ^2.1.3
   video_player: ^2.2.5
-  fastboard_flutter: ^0.1.2
+
   flutter_svg: ^1.1.6
   rive: ^0.11.4
   permission_handler: ^10.4.3
@@ -55,7 +55,10 @@ dependencies:
   camera: ^0.10.5+2
   mic_stream: ^0.6.5
   flutter_secure_storage: ^8.0.0
-
+  fastboard_flutter:
+    git:
+      url: https://github.com/ceeyu/XianGitclone.git
+      path: Not3XianGit/fastboard_flutter
 dev_dependencies:
   flutter_test:
     sdk: flutter
