--- a/Not3XianGit/0809統合測試檔/flutter_project/pubspec.yaml
+++ b/Not3XianGit/0809統合測試檔/flutter_project/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
     git:
       url: https://github.com/ceeyu/XianGitclone.git
       path: Not3XianGit/fastboard_flutter 
+  pdf: ^3.10.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
