0817 yaml檔加上riv且配合disconnect最後一人確認

--- a/Not3XianGit/0816加上葉子內成員版本/flutter_project/pubspec.yaml
+++ b/Not3XianGit/0816加上葉子內成員版本/flutter_project/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
     - assets/images/Greentree.png
     - assets/images/marigold.png
     - assets/images/SunFlower.png
+    - assets/tree_demo.riv
 
 
 
