--- a/Not3XianGit/0821子晴版本/flutter_project/pubspec.yaml
+++ b/Not3XianGit/0821子晴版本/flutter_project/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.17.0 <=3.0.6'
+  sdk: '>=2.17.0 <3.0.6'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -66,6 +66,7 @@ dependencies:
   file_saver: ^0.2.6
   archive: ^3.3.7
   html: ^0.15.4
+  url_launcher: ^6.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
